force-app/main/default/objects/Case/fields/Reason_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closure__c</fullName>
    <label>Reason for Closure</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>