force-app/main/default/objects/Case/fields/Reason_to_Keep_Open__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Keep_Open__c</fullName>
    <description>For Partner Care Case Follow Up Section.</description>
    <label>Reason to Keep Open</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>