force-app/main/default/objects/Case/fields/Related_Credit_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Credit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the credit request related to the case.</description>
    <inlineHelpText>Displays the credit request related to the case.</inlineHelpText>
    <label>Related Credit Request</label>
    <referenceTo>Billing_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>