force-app/main/default/objects/Case/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order related to the Case</description>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>