force-app/main/default/objects/Case/fields/Relates_To__c.field-meta.xml
<CustomField>
    <fullName>Relates_To__c</fullName>
    <label>Relates To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent (Linux)</fullName>
            </value>
            <value>
                <fullName>Agent (Windows)</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Archiving</fullName>
            </value>
            <value>
                <fullName>Bare-Metal Restore</fullName>
            </value>
            <value>
                <fullName>Control Panels</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Database Add-on</fullName>
            </value>
            <value>
                <fullName>Database Restore</fullName>
            </value>
            <value>
                <fullName>DataCenter Console (DCC)</fullName>
            </value>
            <value>
                <fullName>Disk Safe / Volumes</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>File Restore</fullName>
            </value>
            <value>
                <fullName>Install / Upgrade</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Linux Kernel Module</fullName>
            </value>
            <value>
                <fullName>Merge/Vacuum</fullName>
            </value>
            <value>
                <fullName>MS Exchange</fullName>
            </value>
            <value>
                <fullName>MSSQL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Remote Replication</fullName>
            </value>
            <value>
                <fullName>Replication (Failing)</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>SBM</fullName>
            </value>
            <value>
                <fullName>UI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>