force-app/main/default/objects/Case/fields/Release_Target__c.field-meta.xml
<CustomField>
    <fullName>Release_Target__c</fullName>
    <label>Release Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>