force-app/main/default/objects/Case/fields/Requested_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Go_Live_Date__c</fullName>
    <label>Requested Go Live Date</label>
    <type>Date</type>
</CustomField>