force-app/main/default/objects/Case/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Review</fullName>
            </value>
            <value>
                <fullName>On-Demand Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>