force-app/main/default/objects/Case/fields/Scheduled_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Review_Date__c</fullName>
    <label>Scheduled Review Date</label>
    <type>Date</type>
</CustomField>