force-app/main/default/objects/Case/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24x7 - US ONLY</fullName>
            </value>
            <value>
                <fullName>Business Hours - US ONLY</fullName>
            </value>
            <value>
                <fullName>After Hours - US ONLY</fullName>
            </value>
            <value>
                <fullName>24x7 - Global</fullName>
            </value>
            <value>
                <fullName>Business Hours - Global</fullName>
            </value>
            <value>
                <fullName>After Hours - Global</fullName>
            </value>
            <value>
                <fullName>24x7 - US Voice</fullName>
            </value>
            <value>
                <fullName>Business Hours - US Voice</fullName>
            </value>
            <value>
                <fullName>After Hours - US Voice</fullName>
            </value>
            <value>
                <fullName>24x7</fullName>
            </value>
            <value>
                <fullName>Business Hours</fullName>
            </value>
            <value>
                <fullName>After Hours</fullName>
            </value>
            <value>
                <fullName>24x7 - US Premier</fullName>
            </value>
            <value>
                <fullName>Business Hours - US Premier</fullName>
            </value>
            <value>
                <fullName>After Hours - US Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>