force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
                <default>true</default>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>