force-app/main/default/objects/Case/fields/Sold_To_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Contact_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the Primary Sold To Contact when there is a Distributor or Reseller involved else will remain blank</description>
    <inlineHelpText>Refers to the Primary Sold To Contact when there is a Distributor or Reseller involved else will remain blank</inlineHelpText>
    <label>Sold To Contact (Primary)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>