force-app/main/default/objects/Case/fields/TSE_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TSE_TimeStamp__c</fullName>
    <description>Drives the auto workflows, runs the auto-close workflows.</description>
    <label>TSE TimeStamp</label>
    <type>DateTime</type>
</CustomField>