force-app/main/default/objects/Case/fields/Waiting_for__c.field-meta.xml
<CustomField>
    <fullName>Waiting_for__c</fullName>
    <description>For Partner Care Case Follow Up Section.</description>
    <label>Waiting For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Contracts Admin</fullName>
            </value>
            <value>
                <fullName>CW Support</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
                <isActive>false</isActive>
                <label>HD</label>
            </value>
            <value>
                <fullName>HDQA</fullName>
            </value>
            <value>
                <fullName>HD Tools</fullName>
            </value>
            <value>
                <fullName>HelpDesk</fullName>
            </value>
            <value>
                <fullName>InfoSec</fullName>
            </value>
            <value>
                <fullName>Master Data Management</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
                <isActive>false</isActive>
                <label>NOC</label>
            </value>
            <value>
                <fullName>NOC - Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>NOC - Network Management</fullName>
            </value>
            <value>
                <fullName>NOC - PST</fullName>
            </value>
            <value>
                <fullName>NOC - R1 Soft</fullName>
            </value>
            <value>
                <fullName>NOC - Recover</fullName>
            </value>
            <value>
                <fullName>NOC - RTM</fullName>
            </value>
            <value>
                <fullName>NOC - SRT</fullName>
            </value>
            <value>
                <fullName>NOC - Tech Advantage</fullName>
            </value>
            <value>
                <fullName>Onboarding / Implementation</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Care</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
                <isActive>false</isActive>
                <label>PM</label>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>