force-app/main/default/objects/Case/fields/X1st_Site__c.field-meta.xml
<CustomField>
    <fullName>X1st_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to be checked when the Help Desk Agents Usage Field = 0 and Account is mapped on Case record</description>
    <inlineHelpText>Checkbox to be checked when the Help Desk Agents Usage Field = 0 and Account is mapped on Case record</inlineHelpText>
    <label>1st Site ?</label>
    <type>Checkbox</type>
</CustomField>