force-app/main/default/objects/Case/recordTypes/Help_Desk_Activation.recordType-meta.xml
<RecordType>
    <fullName>Help_Desk_Activation</fullName>
    <active>true</active>
    <businessProcess>Help Desk Activation</businessProcess>
    <description>Select for Help Desk Activation Cases</description>
    <label>Help Desk Activation</label>
</RecordType>