force-app/main/default/objects/Case/recordTypes/Licensing_Provisioning.recordType-meta.xml
<RecordType>
    <fullName>Licensing_Provisioning</fullName>
    <active>true</active>
    <businessProcess>Licensing%2FProvisioning</businessProcess>
    <description>Select to provision licenses once an Order is created</description>
    <label>Licensing/Provisioning</label>
</RecordType>