force-app/main/default/objects/Case/recordTypes/Mergers_Acquisitions.recordType-meta.xml
<RecordType>
    <fullName>Mergers_Acquisitions</fullName>
    <active>true</active>
    <businessProcess>Mergers %26 Acquisitions</businessProcess>
    <description>Select for Mergers &amp; Acquisitions</description>
    <label>Mergers &amp; Acquisitions</label>
</RecordType>