force-app/main/default/objects/Case/recordTypes/Partner_Care.recordType-meta.xml
<RecordType>
    <fullName>Partner_Care</fullName>
    <active>true</active>
    <businessProcess>Partner Care</businessProcess>
    <description>Select for Partner Care Cases</description>
    <label>Partner Care</label>
</RecordType>