force-app/main/default/objects/Case/recordTypes/Partner_Success.recordType-meta.xml
<RecordType>
    <fullName>Partner_Success</fullName>
    <active>true</active>
    <businessProcess>Partner Success</businessProcess>
    <description>Partner Success Team&apos;s Email to Case setup</description>
    <label>Partner Success</label>
</RecordType>