force-app/main/default/objects/Case/recordTypes/R1Soft_Support.recordType-meta.xml
<RecordType>
    <fullName>R1Soft_Support</fullName>
    <active>true</active>
    <businessProcess>R1Soft Support</businessProcess>
    <description>Select for R1Soft Support Cases</description>
    <label>R1Soft Support</label>
</RecordType>