force-app/main/default/objects/Case/validationRules/Restrict_HDA_Case_Creation_On_Subject.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_HDA_Case_Creation_On_Subject</fullName>
    <active>true</active>
    <description>Only allow cases with a subject of &quot;Help Desk Enable&quot; to be created</description>
    <errorConditionFormula>Subject != &quot;Help Desk Enable&quot;
&amp;&amp;  RecordType.DeveloperName = &quot;Help_Desk_Activation&quot;</errorConditionFormula>
    <errorMessage>Cases with a Subject &quot;Help Desk Enable&quot;  are only allowed to be created for Help Desk Activations</errorMessage>
</ValidationRule>