force-app/main/default/objects/Case/listViews/CWS_Merger_Acquisitions_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CWS_Merger_Acquisitions_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Merger &amp; Acquisitions Queue</label>
    <queue>CWS_Merger_Acquisitions_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>