force-app/main/default/objects/Case/listViews/CWS_Partner_Success_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CWS_Partner_Success_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Success Queue</label>
    <queue>CWS_Partner_Success_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>