force-app/main/default/objects/Case/listViews/Licensing_Provisioning_Cases_New.listView-meta.xml
<ListView>
    <fullName>Licensing_Provisioning_Cases_New</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold,New,In Progress,Waiting on Internal,Waiting on Vendor</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Licensing_Provisioning</value>
    </filters>
    <label>Licensing/Provisioning Cases - New</label>
    <language>en_US</language>
    <sharedTo>
        <role>CWS_Business_Operations</role>
        <role>CWS_Sr_Manager_Business_Operations</role>
        <role>CWS_Supervisor_Business_Operations</role>
    </sharedTo>
</ListView>